objects/nFORCE__Brand__c.object
<CustomObject>
    <description>The Customer Engagement Solution uses this object to create Brands. The Brand contains styling information specific to an Institution. One financial institution can offer multiple Institutions, each styled to meet its individual branding requirements.</description>
    <fields>
        <fullName>nFORCE__Brand_Custom_CSS__c</fullName>
        <description>Use this text field to store the custom CSS associated with the brand.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this text field to store the custom CSS associated with the brand.</inlineHelpText>
        <label>Brand Custom CSS</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Brand_JSON__c</fullName>
        <description>Use this text field to store the JSON data that determines the branding style.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use this text field to store the JSON data that determines the branding style.</inlineHelpText>
        <label>Brand JSON</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Description__c</fullName>
        <description>Manually populate this text field with a description of the brand.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a description of the brand so you can keep track of what the brand is used for.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, applies this brand to the entire Customer Engagement Solution when the custom setting &quot;Multiple Institutions Enabled&quot; is disabled. If “Multiple Institutions Enabled” is enabled, the brand specified for each institution overrides this flag.</description>
        <inlineHelpText>When selected, applies this brand to the entire Customer Engagement Solution when the custom setting &quot;Multiple Institutions Enabled&quot; is disabled. If “Multiple Institutions Enabled” is enabled, the brand specified for each institution overrides this flag.</inlineHelpText>
        <label>Is Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Look_Up_Key__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__LookupKey__c</fullName>
        <description>-DEPRECATED- Deprecated field, no longer in use, replaced by Look_Up_Key__c</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Lookup Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Brand</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>